Change the logic of CommandLineParser